# felix

./: .gitignore  README.md
frontend/: README.md  (+2 more)
services/planning/: .env.example  README.md  pyproject.toml
services/planning/src/productivity_agent/: __init__.py  init_db.py  main.py
services/planning/src/productivity_agent/agent/: __init__.py  models.py  router.py  runtime.py
services/planning/src/productivity_agent/agent/agno/: README.md  __init__.py  models.py  runtime.py  team.py  tools.py
services/planning/src/productivity_agent/agent/handlers/: __init__.py  calendar.py  coaching.py  planning.py
services/planning/src/productivity_agent/agent/tools/: __init__.py  calendar_tools.py  planning_tools.py  work_tools.py
services/planning/src/productivity_agent/application/use_cases/: create_calendar_event.py  delete_calendar_event.py  list_calendar_events.py  update_calendar_event.py
services/planning/src/productivity_agent/bootstrap/: __init__.py  app.py
services/planning/src/productivity_agent/domain/calendar/: __init__.py
services/planning/src/productivity_agent/infrastructure/: settings.py
services/planning/src/productivity_agent/infrastructure/ai/: __init__.py  openai_client.py
services/planning/src/productivity_agent/infrastructure/db/: base.py  models.py
services/planning/src/productivity_agent/infrastructure/repositories/: sqlalchemy_calendar_event_repository.py
services/planning/tests/agent/: test_api.py  test_runtime.py
services/planning/tests/domain/: test_time_range.py
services/planning/tests/infrastructure/: test_openai_client.py
(+30 files in other folders)
